contrib/media/audio/tests/snapshots/golden__waveform_ai_generated.snap
---
source: crates/rskit-media-audio/tests/golden.rs
expression: "serde_json::json!({ \"bin_count\": points.len(), \"bins\": summary, })"
---
{
  "bin_count": 10,
  "bins": [
    {
      "bin": 0,
      "peak": 0.5529999732971191,
      "rms": 0.0949999988079071
    },
    {
      "bin": 1,
      "peak": 0.4690000116825104,
      "rms": 0.08900000154972076
    },
    {
      "bin": 2,
      "peak": 0.1889999955892563,
      "rms": 0.04899999871850014
    },
    {
      "bin": 3,
      "peak": 0.46399998664855957,
      "rms": 0.0820000022649765
    },
    {
      "bin": 4,
      "peak": 0.4099999964237213,
      "rms": 0.09200000017881393
    },
    {
      "bin": 5,
      "peak": 0.24400000274181366,
      "rms": 0.057999998331069946
    },
    {
      "bin": 6,
      "peak": 0.3070000112056732,
      "rms": 0.07199999690055847
    },
    {
      "bin": 7,
      "peak": 0.26100000739097595,
      "rms": 0.08900000154972076
    },
    {
      "bin": 8,
      "peak": 0.3269999921321869,
      "rms": 0.09099999815225601
    },
    {
      "bin": 9,
      "peak": 0.12800000607967377,
      "rms": 0.024000000208616257
    }
  ]
}
