contrib/media/audio/tests/snapshots/golden__waveform_real_voice.snap
---
source: crates/rskit-media-audio/tests/golden.rs
expression: "serde_json::json!({ \"bin_count\": points.len(), \"bins\": summary, })"
---
{
  "bin_count": 10,
  "bins": [
    {
      "bin": 0,
      "peak": 0.004000000189989805,
      "rms": 0.0010000000474974513
    },
    {
      "bin": 1,
      "peak": 0.1379999965429306,
      "rms": 0.03700000047683716
    },
    {
      "bin": 2,
      "peak": 0.14499999582767487,
      "rms": 0.0430000014603138
    },
    {
      "bin": 3,
      "peak": 0.12399999797344208,
      "rms": 0.027000000700354576
    },
    {
      "bin": 4,
      "peak": 0.210999995470047,
      "rms": 0.061000000685453415
    },
    {
      "bin": 5,
      "peak": 0.23100000619888306,
      "rms": 0.06300000101327896
    },
    {
      "bin": 6,
      "peak": 0.11699999868869781,
      "rms": 0.04500000178813934
    },
    {
      "bin": 7,
      "peak": 0.01899999938905239,
      "rms": 0.004000000189989805
    },
    {
      "bin": 8,
      "peak": 0.08699999749660492,
      "rms": 0.00800000037997961
    },
    {
      "bin": 9,
      "peak": 0.11800000071525574,
      "rms": 0.03200000151991844
    }
  ]
}
